# FormationCompleteProgrammationPython

./: .gitignore  README.md
01-Introduction/cours/: 01-introduction.ipynb
01-Introduction/exercices/: calculatrice_simple.py  hello_world.py
02-Variables-Types/cours/: 02-variables-types.ipynb
02-Variables-Types/exercices/: convertisseur.py  operations.py
03-Strings/cours/: 03-strings.ipynb
03-Strings/exercices/: analyseur_texte.py  generateur_slogan.py
04-Listes-Tuples/cours/: 04-listes-tuples.ipynb
04-Listes-Tuples/exercices/: liste_courses.py  operations_listes.py
05-Dictionnaires-Ensembles/cours/: 05-dictionnaires-ensembles.ipynb
05-Dictionnaires-Ensembles/exercices/: annuaire.py  mots_uniques.py
06-Controle-de-flux/cours/: 06-controle-flux.ipynb
06-Controle-de-flux/exercices/: calcul_imc.py  nombre_mystere.py
07-Boucles/cours/: 07-boucles.ipynb
07-Boucles/exercices/: pyramide.py  tables_multiplication.py
08-Fonctions/cours/: 08-fonctions.ipynb
08-Fonctions/exercices/: calculateur_scientifique.py  jeu_pendu.py
09-Comprehensions/cours/: 09-comprehensions.ipynb
09-Comprehensions/exercices/: filtre_donnees.py  mots_longueur.py
10-Erreurs-Exceptions/cours/: 10-erreurs-exceptions.ipynb
10-Erreurs-Exceptions/exercices/: calculatrice_robuste.py  conversion_securisee.py
11-Modules-Packages/cours/: 11-modules-packages.ipynb
30-Packaging-Distribution/exercices/mon_package/: README.md  pyproject.toml
30-Packaging-Distribution/exercices/mon_package/src/mon_package/: __init__.py  math_utils.py  string_utils.py
(+71 files in other folders)
