[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mon-package-formation"
version = "0.1.0"
description = "Package d'exemple pour la formation Python"
readme = "README.md"
authors = [
    {name = "Etudiant Formation"}
]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.scripts]
mon-package = "mon_package.cli:main"
